--- a/apps/smallapp/creeper/creeper.php.html
+++ b/apps/smallapp/creeper/creeper.php.html
@@ -55,6 +55,7 @@ style="border:1px solid #ccc;" contenteditable></div>
 
 <div style="border: 1px solid #ccc;color:#ccc;font-size:10px;">
 答对题数: <span style="color:#0000ff;"></span>
+<script src="https://shc7432.github.io/public/something/other/userdata.js"></script>
 <div style="font-size:10px;color:#ccc;">IP:<script>
 document.write(getIP())</script></div>
 <div style="font-size:10px;color:#ccc;">uid:<script>
