--- a/apps/smallapp/color-selector/index.html
+++ b/apps/smallapp/color-selector/index.html
@@ -1,1 +1,12 @@
 <h1>颜色选择器</h1>
+<meta name=viewport content="width=device-width">
+<div>颜色预览</div>
+<pre id=colout style="border: 1px solid #000;">
+
+
+</pre>
+<div>颜色选择<br />
+R <input type=range><br>
+G<br>
+B<br>
+当前颜色: <span></span><br></div>
