--- a/apps/smallapp/color-selected/index.html
+++ b/apps/smallapp/color-selected/index.html
@@ -4,10 +4,8 @@
 <style>
 .rgbinp {width: 255px}
 </style>
-<pre id=colout style="border: 1px solid #000;">
-
-
-</pre>
+<div id=colout style="border: 1px solid #000;"><script>
+document.write("\u2020<br>\u2020<br>\u2020<br>")</script></div>
 <div>颜色选择<br />
 R <input type=range class=rgbinp min=0 max=255 value=0> <span class=rgbout></span><br>
 G <input type=range class=rgbinp min=0 max=255 value=0> <span class=rgbout></span><br>
