--- a/apps/smallapp/color-selected/index.html
+++ b/apps/smallapp/color-selected/index.html
@@ -25,7 +25,7 @@ var rHex=(Math.floor((rgbinp[0].value)/16)).toString(16);
 var gHex=(Math.floor((rgbinp[1].value)/16)).toString(16);
 var bHex=(Math.floor((rgbinp[2].value)/16)).toString(16);
 var rrggbb="#"+rHex+rHex+gHex+gHex+bHex+bHex;
-nowColor.innerHTML=colout.style.backgroundColor=rrggbb;}catch(e){alert(e)}
+newColor.innerHTML=colout.style.backgroundColor=rrggbb;}catch(e){alert(e)}
 return rrggbb
 }
 }
