--- a/apps/smallapp/color-selected/index.html
+++ b/apps/smallapp/color-selected/index.html
@@ -10,7 +10,7 @@ document.write("<br><br><br>")</script></div>
 R <input type=range class=rgbinp min=0 max=255 value=0> <span class=rgbout></span><br>
 G <input type=range class=rgbinp min=0 max=255 value=0> <span class=rgbout></span><br>
 B <input type=range class=rgbinp min=0 max=255 value=0> <span class=rgbout></span><br>
-当前颜色: <span id=nowcolor></span><br></div>
+当前颜色: <span id=nowcolor style="color:blue"></span><br></div>
 
 <script>
 rgbinp=document.querySelectorAll(".rgbinp")
@@ -25,7 +25,9 @@ var rHex=(Math.floor((rgbinp[0].value)/16)).toString(16);
 var gHex=(Math.floor((rgbinp[1].value)/16)).toString(16);
 var bHex=(Math.floor((rgbinp[2].value)/16)).toString(16);
 var rrggbb="#"+rHex+rHex+gHex+gHex+bHex+bHex;
-nowcolor.innerHTML=colout.style.backgroundColor=rrggbb;}catch(e){alert(e)}
+colout.style.backgroundColor="rgb("+rgbinp[0].value+","+rgbinp[1].value+","+rgbinp[2].value")";
+nowcolor.innerHTML=rrggbb
+}catch(e){alert(e)}
 return rrggbb
 }
 }
