--- a/apps/smallapp/color-selected/index.html
+++ b/apps/smallapp/color-selected/index.html
@@ -23,9 +23,9 @@ rgbout[1].innerHTML=rgbinp[1].value
 rgbout[2].innerHTML=rgbinp[2].value
 try{
 var list=["#"]
-list.push(parseInt(rgbinp[0].value,10).toString(16))
-list.push(parseInt(rgbinp[1].value,10).toString(16))
-list.push(parseInt(rgbinp[2].value,10).toString(16))
+list.push(testLength(parseInt(rgbinp[0].value,10).toString(16),2))
+list.push(testLength(parseInt(rgbinp[1].value,10).toString(16),2))
+list.push(testLength(parseInt(rgbinp[2].value,10).toString(16),2))
 var rrggbb=list.join("")
 colout.style.backgroundColor="rgb("+rgbinp[0].value+","+rgbinp[1].value+","+rgbinp[2].value+")";
 nowcolor.innerHTML=rrggbb
@@ -33,11 +33,18 @@ nowcolor.innerHTML=rrggbb
 return rrggbb
 }
 }
+function testLength(str,lth=0){
+if(str.length<lth) {
+return "0"+str;
+} else {
+return str;
+}}
+
 nowcolor.oninput=function(){
 var a=this.innerHTML
 var no7
 colout.style.backgroundColor=a
-if(a.length!=7&&a.length!=4) no7="请输入#xxxxxx的颜色值!";
+//if(a.length!=7&&a.length!=4) no7="请输入#xxxxxx的颜色值!";
 a=a.replace("#","")
 var b,c,d
 b=a.substr(0,2)
