--- a/apps/smallapp/color-selected/index.html
+++ b/apps/smallapp/color-selected/index.html
@@ -11,9 +11,8 @@ document.write("<br><br><br>")</script></div>
 R <input type=range class=rgbinp min=0 max=255 value=0> <span class=rgbout></span><br>
 G <input type=range class=rgbinp min=0 max=255 value=0> <span class=rgbout></span><br>
 B <input type=range class=rgbinp min=0 max=255 value=0> <span class=rgbout></span><br>
-<pre style="background-color:#7fcaff;width:80px;text-align:center;">
-随机
-</pre><br>
+<pre style="background-color:#7fcaff;width:80px;text-align:center;" onclick="randomVal()">
+随机</pre><br>
 当前颜色: <span id=nowcolor style="color:blue" contenteditable></span><br></div>
 
 <script>
