--- a/apps/smallapp/color-selected/index.html
+++ b/apps/smallapp/color-selected/index.html
@@ -1,5 +1,6 @@
 <h1>颜色选择器</h1>
 <meta name=viewport content="width=device-width">
+<title>颜色选择器</title>
 <div>颜色预览</div>
 <style>
 .rgbinp {width: 255px}
