--- a/apps/smallapp/at-bilibili-user/at.php.html
+++ b/apps/smallapp/at-bilibili-user/at.php.html
@@ -132,6 +132,7 @@ if(uname){
 uname=decodeURIComponent(uname);
 atpeopleusername.value=uname;
 adddoge.checked=doge;
+isup.checked=isup;
 dogenum.value=dogen;
 var rstr=str.replace((new RegExp("wuli小周","g")),uname);
 if(doge){
