--- a/apps/smallapp/at-bilibili-user/at.php.html
+++ b/apps/smallapp/at-bilibili-user/at.php.html
@@ -116,6 +116,7 @@ var uname=getUrlValue("username");
 var doge=getUrlValue("adddoge");
 var dogen=getUrlValue("dogenum");
 var isup=getUrlValue("isup");
+var dm=document;
 var str=("你们不要老@wuli小周 了，你们天天@wuli小周 @wuli小周 @wuli小周 @wuli小周 的，"+
 "你们有没有考虑过@wuli小周 的感受？你们知道人家@wuli小周 做视频有多辛苦吗？你们老@wuli小周"+
 " @wuli小周 @wuli小周 没完没了的@wuli小周 @wuli小周 @wuli小周 ，你们再这样@wuli小周 会"+
@@ -132,7 +133,7 @@ if(uname){
 uname=decodeURIComponent(uname);
 atpeopleusername.value=uname;
 adddoge.checked=doge;
-isup.checked=isup;
+dm.querySelector("#isup").checked=isup;
 dogenum.value=dogen;
 var rstr=str.replace((new RegExp("wuli小周","g")),uname);
 if(doge){
