--- a/apps/smallapp/at-bilibili-user/at.php.html
+++ b/apps/smallapp/at-bilibili-user/at.php.html
@@ -61,7 +61,8 @@ location.reload(1);
 </head>
 <body>
 
-<h1>@人 生成器</h1>
+<h1><span style="color:blue;" onclick=
+"open('https://space.bilibili.com/41293')">@人</span> 生成器</h1>
 
 <form style="border:1px solid #ccc;" action="" method="get">
 输入你要@的人 :<input name=username id=atpeopleusername> <span id=zstips></span><br>
