--- a/apps/smallapp/at-bilibili-user/at.php.html
+++ b/apps/smallapp/at-bilibili-user/at.php.html
@@ -62,7 +62,7 @@ location.reload(1);
 <body>
 
 <h1><span style="color:blue;" onclick=
-"open('https://space.bilibili.com/41293')">@人</span> 生成器</h1>
+"window.open('https://space.bilibili.com/41293','_blank')">@人</span> 生成器</h1>
 
 <form style="border:1px solid #ccc;" action="" method="get">
 输入你要@的人 :<input name=username id=atpeopleusername> <span id=zstips></span><br>
