--- a/apps/smallapp/water-content/index.html
+++ b/apps/smallapp/water-content/index.html
@@ -35,7 +35,7 @@ function getRandom(min, max) {
 
 <h1>凑字数器</h1>
 <div style="border:1px solid #ccc;">
-凑<span style="width:20px;"></span>个字<br>
+凑<span style="width:20px;border:1px solid #888;"></span>个字<br>
 
 </div>
 
