--- a/apps/smallapp/water-content/index.html
+++ b/apps/smallapp/water-content/index.html
@@ -35,8 +35,9 @@ function getRandom(min, max) {
 
 <h1>凑字数器</h1>
 <div style="border:1px solid #ccc;">
-凑<span style="width:20px;border:1px solid #888;"></span>个字<br>
-
+凑<span style="width:20px;border:1px solid #888;" onblur=
+"if(this.innerHTML=='') this.innerHTML=' '"> </span>个字<br>
+<span id=create>生成</span> &nbsp; &nbsp; <span id=rst>复制</span>
 </div>
 
 </body>
