--- a/apps/smallapp/water-content/index.html
+++ b/apps/smallapp/water-content/index.html
@@ -35,10 +35,50 @@ function getRandom(min, max) {
 
 <h1>凑字数器</h1>
 <div style="border:1px solid #ccc;">
-凑<span style="width:20px;border:1px solid #888;" onblur=
-"if(this.innerHTML=='') this.innerHTML=' '"> </span>个字<br>
-<span id=create>生成</span> &nbsp; &nbsp; <span id=rst>复制</span>
+凑<span style="width:20px;border:1px solid #888;" id=count onblur=
+"if(this.innerHTML=='') this.innerHTML=' '" contenteditable> </span>个字<br>
+<span id=create>生成</span> &nbsp; &nbsp; <span id=copy>复制</span> &nbsp; &nbsp; 
+<span id=rst style="background-color: #7fcaff;">重置</span> 
 </div>
+
+<script>
+(function(){
+create.style.backgroundColor="#7fcaff";
+copy.style.backgroundColor="#ccc";
+btnsStatus={create: 1,copy: 0};
+befinput="";
+
+count.oninput=function(){
+if(isNaN(Number(this.innerHTML.replace(befinput)))) this.innerHTML=befinput;
+}
+
+create.onclick=function(){
+if(btnsStatus.create){
+var str="";
+for(let i=0;i<parseInt(count.innerHTML)){
+str+="⁠";
+}
+out=str;
+create.style.backgroundColor="#ccc";
+copy.style.backgroundColor="#7fcaff";
+btnsStatus={create: 0,copy: 1};
+ }
+}
+copy.onclick=function(){
+if(btnsStatus.copy){
+copytext(out);
+this.innerHTML="复制成功";
+setTimeout(function(){this.innerHTML="复制"},2000)
+ }
+}
+rst.onclick=function(){
+create.style.backgroundColor="#7fcaff";
+copy.style.backgroundColor="#ccc";
+btnsStatus={create: 1,copy: 0};
+}
+
+})()
+</script>
 
 </body>
 </html>
