--- a/apps/smallapp/water-content/index.html
+++ b/apps/smallapp/water-content/index.html
@@ -55,7 +55,7 @@ if(isNaN(Number(this.innerHTML.replace(befinput)))) this.innerHTML=befinput;
 create.onclick=function(){
 if(btnsStatus.create){
 var str="";
-for(let i=0;i<parseInt(count.innerHTML)){
+for(let i=0;i<parseInt(count.innerHTML);i++){
 str+="⁠";
 }
 out=str;
