--- a/apps/smallapp/water-content/index.html
+++ b/apps/smallapp/water-content/index.html
@@ -29,6 +29,7 @@
 function getRandom(min, max) {
     return Math.floor(Math.random() * (max - min + 1) ) + min;
 }
+nbsp10="&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"
 </script>
 </head>
 <body>
@@ -36,8 +37,9 @@ function getRandom(min, max) {
 <h1>凑字数器</h1>
 <div style="border:1px solid #ccc;">
 凑<span style="width:20px;border:1px solid #888;" id=count 
-onfocus="if(this.innerHTML==' ') this.innerHTML=''" 
-onblur="if(this.innerHTML=='') this.innerHTML=' '" contenteditable> </span>个字<br>
+onfocus="{let a=this.innerHTML;if(a==nbsp10||a=='          ') this.innerHTML=''}" 
+onblur="if(this.innerHTML=='') this.innerHTML=nbsp10" contenteditable>
+<script>for(let i=0;i<20;i++){document.write("&nbsp;")}</script></span>个字<br>
 <span id=create>生成</span> &nbsp; &nbsp; <span id=copy>复制</span> &nbsp; &nbsp; 
 <span id=rst style="background-color: #7fcaff;">重置</span> 
 </div>
@@ -49,11 +51,11 @@ copy.style.backgroundColor="#ccc";
 btnsStatus={create: 1,copy: 0};
 befinput="";
 
-count.oninput=function(){
+/*count.oninput=function(){
 if(isNaN(Number(this.innerHTML.replace(befinput,"")))){
 this.innerHTML=befinput;
 } else {befinput=this.innerHTML}
-}
+}*/
 
 create.onclick=function(){
 if(btnsStatus.create){
