--- a/apps/smallapp/water-content/index.html
+++ b/apps/smallapp/water-content/index.html
@@ -60,6 +60,10 @@ this.innerHTML=befinput;
 create.onclick=function(){
 if(btnsStatus.create){
 var str="";
+if(isNaN(Number(count.innerHTML))){
+this.innerHTML="生成失败,原因:输入不是数字";
+return;
+}
 for(let i=0;i<parseInt(count.innerHTML);i++){
 str+="⁠";
 }
