--- a/apps/smallapp/water-content/index.html
+++ b/apps/smallapp/water-content/index.html
@@ -60,8 +60,11 @@ this.innerHTML=befinput;
 create.onclick=function(){
 if(btnsStatus.create){
 var str="";
+count.innerHTML=count.innerHTML.replace(/\u0020/,"");
+if(count.innerHTML=="") count.innerHTML=nbsp10;
 if(isNaN(Number(count.innerHTML))){
 this.innerHTML="生成失败,原因:输入不是数字";
+setTimeout('create.innerHTML="生成"',2000)
 return;
 }
 for(let i=0;i<parseInt(count.innerHTML);i++){
