--- a/apps/smallapp/water-content/index.html
+++ b/apps/smallapp/water-content/index.html
@@ -60,7 +60,8 @@ this.innerHTML=befinput;
 create.onclick=function(){
 if(btnsStatus.create){
 var str="";
-count.innerHTML=count.innerHTML.replace(/\u0020/,"");
+count.innerHTML=count.innerHTML.replace(/\u0020/g,"");
+count.innerHTML=count.innerHTML.replace(new RegExp("&nbsp;","g"),"");
 if(count.innerHTML=="") count.innerHTML=nbsp10;
 if(isNaN(Number(count.innerHTML))){
 this.innerHTML="生成失败,原因:输入不是数字";
