--- a/apps/smallapp/water-content/index.html
+++ b/apps/smallapp/water-content/index.html
@@ -36,9 +36,7 @@ nbsp10="&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"
 
 <h1>凑字数器</h1>
 <div style="border:1px solid #ccc;">
-凑<span style="width:20px;border:1px solid #888;" id=count 
-onfocus="{let a=this.innerHTML;if(a==nbsp10||a=='          ') this.innerHTML=''}" 
-onblur="if(this.innerHTML=='') this.innerHTML=nbsp10" contenteditable>
+凑<span style="width:20px;border:1px solid #888;" id=count contenteditable>
 <script>for(let i=0;i<20;i++){document.write("&nbsp;")}</script></span>个字<br>
 <span id=create>生成</span> &nbsp; &nbsp; <span id=copy>复制</span> &nbsp; &nbsp; 
 <span id=rst style="background-color: #7fcaff;">重置</span> 
