--- a/apps/smallapp/water-content/index.html
+++ b/apps/smallapp/water-content/index.html
@@ -66,9 +66,11 @@ count.innerHTML=count.innerHTML.replace(new RegExp("&nbsp;","g"),"");
 if(count.innerHTML=="") count.innerHTML=nbsp10;
 if(isNaN(Number(count.innerHTML))){
 this.innerHTML="生成失败,原因:输入不是数字";
+setTimeout(function(){
+create.innerHTML="生成";
 this.style.backgroundColor="#7fcaff";
 btnsStatus.create=1;
-setTimeout('create.innerHTML="生成"',2000)
+},2000)
 return;
 }
 for(let i=0;i<parseInt(count.innerHTML);i++){
