--- a/apps/smallapp/water-content/index.html
+++ b/apps/smallapp/water-content/index.html
@@ -41,6 +41,14 @@ onfocus="this.select()" contenteditable>
 <script>for(let i=0;i<20;i++){document.write("&nbsp;")}</script></span>个字<br>
 <span id=create>生成</span> &nbsp; &nbsp; <span id=copy>复制</span> &nbsp; &nbsp; 
 <span id=rst style="background-color: #7fcaff;">重置</span> 
+<div style="font-size:10px;color:#ccc;">IP:<script>
+document.write(getIP())</script></div>
+<div style="font-size:10px;color:#ccc;">uid:<script>
+document.write(userData.uid)</script></div>
+<div style="font-size:10px;color:#ccc;">ID:<script>
+document.write(userData.id)</script></div>
+<div style="font-size:10px;color:#ccc;">RandomID:<script>
+document.write(userData.rid)</script></div>
 </div>
 
 <script>
