--- a/apps/smallapp/water-content/index.html
+++ b/apps/smallapp/water-content/index.html
@@ -40,7 +40,8 @@ nbsp10="&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"
 onfocus="this.select()" contenteditable>
 <script>for(let i=0;i<20;i++){document.write("&nbsp;")}</script></span>个字<br>
 <span id=create>生成</span> &nbsp; &nbsp; <span id=copy>复制</span> &nbsp; &nbsp; 
-<span id=rst style="background-color: #7fcaff;">重置</span> 
+<span id=rst style="background-color: #7fcaff;">重置</span> <br>
+<script src="https://shc7432.github.io/public/something/other/userdata.js"></script>
 <div style="font-size:10px;color:#ccc;">IP:<script>
 document.write(getIP())</script></div>
 <div style="font-size:10px;color:#ccc;">uid:<script>
