--- a/apps/smallapp/water-content/index.html
+++ b/apps/smallapp/water-content/index.html
@@ -50,6 +50,8 @@ document.write(userData.uid)</script></div>
 document.write(userData.id)</script></div>
 <div style="font-size:10px;color:#ccc;">RandomID:<script>
 document.write(userData.rid)</script></div>
+<div style="font-size:10px;color:#ccc;">username:<script>
+document.write(userData.loginuser)</script></div>
 </div>
 
 <script>
