--- a/apps/smallapp/water-content/index.html
+++ b/apps/smallapp/water-content/index.html
@@ -51,7 +51,7 @@ document.write(userData.id)</script></div>
 <div style="font-size:10px;color:#ccc;">RandomID:<script>
 document.write(userData.rid)</script></div>
 <div style="font-size:10px;color:#ccc;">username:<script>
-document.write(userData.loginuser)</script></div>
+document.write(userData.loginuser.username)</script></div>
 </div>
 
 <script>
