--- a/apps/smallapp/water-content/index.html
+++ b/apps/smallapp/water-content/index.html
@@ -79,7 +79,7 @@ if(isNaN(Number(count.innerHTML))){
 this.innerHTML="生成失败,原因:输入不是数字";
 setTimeout(function(){
 create.innerHTML="生成";
-this.style.backgroundColor="#7fcaff";
+create.style.backgroundColor="#7fcaff";
 btnsStatus.create=1;
 },2000)
 return;
