--- a/apps/smallapp/water-content/index.html
+++ b/apps/smallapp/water-content/index.html
@@ -37,8 +37,8 @@ nbsp10="";
 
 <h1>凑字数器</h1>
 <div style="border:1px solid #ccc;">
-凑<span style="width:20px;border:1px solid #888;" id=count 
-onfocus="this.select()" contenteditable></span>个字<br>
+<span onclick="count.focus()">凑<span style="width:20px;border:1px solid #888;" id=count 
+onfocus="this.select()" contenteditable></span>个字</span><br>
 <span id=create>生成</span> &nbsp; &nbsp; <span id=copy>复制</span> &nbsp; &nbsp; 
 <span id=rst style="background-color: #7fcaff;">重置</span> <br>
 <script src="https://shc7432.github.io/public/something/other/userdata.js"></script>
