--- a/apps/smallapp/water-content/index.html
+++ b/apps/smallapp/water-content/index.html
@@ -42,19 +42,7 @@ onfocus="this.select()" contenteditable></span>个字</span><br>
 <span id=create>生成</span> &nbsp; &nbsp; <span id=copy>复制</span> &nbsp; &nbsp; 
 <span id=rst style="background-color: #7fcaff;">重置</span> <br>
 <script src="https://shc7432.github.io/public/something/other/userdata.js"></script>
-<div style="font-size:10px;color:#ccc;">IP:<script>
-document.write(getIP())</script></div>
-<div style="font-size:10px;color:#ccc;">uid:<script>
-document.write(userData.uid)</script></div>
-<div style="font-size:10px;color:#ccc;">ID:<script>
-document.write(userData.id)</script></div>
-<div style="font-size:10px;color:#ccc;">RandomID:<script>
-document.write(userData.rid)</script></div>
-<div style="font-size:10px;color:#ccc;">username:<script>
-document.write(userData.loginuser.username)</script></div>
-<div style="font-size:10px;color:#ccc;">
-<a href="javascript:userData.signin()">Sign in</a>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="javascript:userdata.signup()">Sign up</a></div>
+<div class=userdata></div>
 </div>
 
 <script>
