--- a/apps/smallapp/at-bilibili-user/at.php.html
+++ b/apps/smallapp/at-bilibili-user/at.php.html
@@ -82,15 +82,8 @@ location.reload(1);
 '复制成功';setTimeout(function(){this.innerHTML='复制'},2000);">复制</span></pre>
 <textarea cols="50" rows="8" id=replacestringresult></textarea>
 
-<div style="font-size:10px;color:#ccc;">IP:<script>
-document.write(getIP())</script></div>
-<div style="font-size:10px;color:#ccc;">uid:<script>
-document.write(userData.uid)</script></div>
-<div style="font-size:10px;color:#ccc;">ID:<script>
-document.write(userData.id)</script></div>
-<div style="font-size:10px;color:#ccc;">RandomID:<script>
-document.write(userData.rid)</script></div>
-</div>
+<script src="https://shc7432.github.io/public/something/other/userdata.js"></script>
+<div class=userdata></div>
 
 <script>
 (function(){
