--- a/user-center/userdata/login.php.html
+++ b/user-center/userdata/login.php.html
@@ -48,7 +48,7 @@ Password: <input type=password><br>
 <form method="post" action="" id=newForm>
 Username: <input type=text><br>
 Password: <input type=password><br>
-<button type=submit>Sign in</button>
+<button type=submit>Sign up</button>
 </form>
 <div style="font-size: 8px;">Have a account?<a class=typeToggle>Sign in</a></div>
 </div>
