--- a/htmlmodel/htmlmodel.html
+++ b/htmlmodel/htmlmodel.html
@@ -6,6 +6,7 @@
  <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://shc7432.github.io/public/something/sometool.js"></script>
 <script src="https://shc7432.github.io/public/something/other/userdata.js"></script>
+<script src="https://shc7432.github.io/public/something/other/htmlToImg.js"></script>
 <script src="https://shc7432.github.io/public/something/other/anonymous.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
