--- a/apps/smallapp/reproduced/yxhscq/index.html
+++ b/apps/smallapp/reproduced/yxhscq/index.html
@@ -20,3 +20,15 @@
                 </form>
             </div>
             <div class="col-sm-7 col-xs-12">
+                <textarea id="result" onchange="auto_grow(this)" oninput="auto_grow(this)"
+                    placeholder="　　桃子核不能吞下去是怎么回事呢？桃子核相信大家都很熟悉，但是桃子核不能吞下去是怎么回事呢，下面就让小编带大家一起了解吧。&#013;&#010;　　桃子核不能吞下去，其实就是桃核太大了，吞下去容易噎着，大家可能会很惊讶桃子核怎么会不能吞下去呢？但事实就是这样，小编也感到非常惊讶。&#013;&#010;　　这就是关于桃子核不能吞下去的事情了，大家有什么想法呢，欢迎在评论区告诉小编一起讨论哦！"></textarea>
+            </div>
+        </div>
+    </div>
+    <hr />
+    <div id="footer">
+        Made by: Kasei
+        <br />
+        <a href="http://kaseidis.gitee.io/interesting_gadgets/marketing_generator/index.htm" target="_blank">大陆镜像</a>
+    </div>
+</body>
