Update and rename apps/smallapp/reproduced/yxhscq/index.html to apps/smallapp/reprint/yxhscq/index.html

--- a/apps/smallapp/reprint/yxhscq/index.html
+++ b/apps/smallapp/reprint/yxhscq/index.html
@@ -17,6 +17,7 @@
                         <input type="text" id="event2" class="form-control" placeholder="桃核太大了，吞下去容易噎着" required />
                     </div>
                     <input type="submit" value="生成" class="btn btn-primary" onclick="generate()" />
+                    <input type="button" value="播放营销号语音" class="btn btn-primary" onclick="()" />
                 </form>
             </div>
             <div class="col-sm-7 col-xs-12">
