--- a/apps/smallapp/reprint/yxhscq/index.html
+++ b/apps/smallapp/reprint/yxhscq/index.html
@@ -82,7 +82,7 @@ function playsoundDz(sounds,el){
 if(!sced) return;
 bgm.volume = 0.2;
 bgm.play();
-myaudio.src="https://tts.baidu.com/text2audio?cuid=t&lan=zh&ctp=1&pdt=311&tex="+encodeURIComponent(result.value);
+myaudio.src="https://tts.baidu.com/text2audio?cuid=t&lan=zh&ctp=1&pdt=311&tex="+encodeURIComponent(document.getElementById("result").value);
 myaudio.volume=0.6;
 myaudio.play();
 }
