--- a/apps/smallapp/reprint/yxhscq/index.html
+++ b/apps/smallapp/reprint/yxhscq/index.html
@@ -78,14 +78,14 @@ e.preventDefault();
 return false;
 }
 
-function playsoundDz(sounds,el){
+
+</script>
+<span style="position:absolute;top:-999999px;left:-999999px;"><audio src="" id="myaudio" controls="controls"></audio><audio src="bgm1.mp3" id="bgm" controls="controls" loop="false" canplay="window.playsoundDz=function(sounds,el){
 if(!sced) return;
 bgm.volume = 0.2;
 bgm.play();
 myaudio.src="https://tts.baidu.com/text2audio?cuid=t&lan=zh&ctp=1&pdt=311&tex="+encodeURIComponent(document.getElementById("result").value);
 myaudio.volume=0.6;
 myaudio.play();
-}
-</script>
-<span style="position:absolute;top:-999999px;left:-999999px;"><audio src="" id="myaudio" controls="controls" loop="false"></audio><audio src="bgm1.mp3" id="bgm" controls="controls" loop="false"></audio></span>
+}"></audio></span>
 </body>
