--- a/apps/smallapp/reprint/yxhscq/index.html
+++ b/apps/smallapp/reprint/yxhscq/index.html
@@ -1,4 +1,5 @@
 <meta name=viewport content="width=device-width">
+<meta http-equiv="Access-Control-Allow-Origin" content="*">
 <body onload="onload()">
     <div class="container">
         <h1>营销号生成器</h1>
