--- a/apps/smallapp/reprint/yxhscq/index.html
+++ b/apps/smallapp/reprint/yxhscq/index.html
@@ -2,7 +2,7 @@
 <meta http-equiv="Access-Control-Allow-Origin" content="*">
 <body onload="onload()">
 <iframe style="position:absolute;top:-99999px;z-index:3" src="bgm1.mp3" onload="bgmloadok()">如果您看到此消息,请<a href="javascript:bgmloadok()">点这里</a></iframe>
-<audio src="bgm1.mp3" id="bgm" controls="controls" loop="false"></audio>
+<audio src="bgm1.mp3" id="bgm" controls="controls" loop="false" hidden></audio>
     <div class="container">
         <h1>营销号生成器</h1>
         <div class="row">
