--- a/apps/smallapp/reprint/yxhscq/index.html
+++ b/apps/smallapp/reprint/yxhscq/index.html
@@ -36,7 +36,7 @@
         <a href="http://kaseidis.gitee.io/interesting_gadgets/marketing_generator/index.htm" target="_blank">大陆镜像</a>
     </div>
 <div id=notloadok style="background-color:#fff;position: absolute;  top: 0%;  left: 0%;  width: 100%;  height: 100%;  border: 0px solid #fff;  background-color: #ffffff;text-align:center;">
-<h1>正在加载,请稍候...</h1></div>
+<h1>正在加载,请稍候...</h1><br><br><span id=cantload hidden>若加载较长时间仍无法完成,请<a href="javascript:bgmloadok()">点击这里</a><br>当前已加载<span style="color:blue" id=loadedtime></span>秒</span></div>
 <style>
 textarea {
     resize: none;
@@ -72,6 +72,13 @@ myaudio.src="https://tts.baidu.com/text2audio?cuid=t&lan=zh&ctp=1&pdt=311&tex="+
 myaudio.volume=0.6;
 myaudio.play();}
 notloadok.hidden=1;
+uploadloadtime=undefined;
+}
+function uploadloadtime(){
+if(typeof(t)=="undefined") var t=0;
+t++;
+loadedtime.innerHTML=t;
+setTimeout(uploadloadtime,1000);
 }
 
 function generate() {
